# linear-relational-concepts

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/mte/: city_in_country.json
linear_relational_concepts/: CausalEditor.py  ConceptMatcher.py  EarlyDecoder.py  MultitokenEstimator.py  PromptGenerator.py  similarity.py
linear_relational_concepts/data/: RelationDataset.py  data_loaders.py
linear_relational_concepts/evaluation/: Evaluator.py  evaluate_accuracy_and_causality.py  evaluate_relation_causality.py  statistical_significance.py
linear_relational_concepts/experiments/: benchmark_gpt2.py  benchmark_gptj.py  benchmark_llama2.py  benchmark_single_sample_llama2.py  sweep_max_samples_llama2.py  sweep_object_layers_gpt2.py  sweep_object_layers_gptj.py  sweep_object_layers_llama2.py  sweep_ranks_gpt2.py  sweep_ranks_gptj.py  sweep_ranks_llama2.py  sweep_subject_layers_gpt2.py  sweep_subject_layers_gptj.py  sweep_subject_layers_llama2.py
linear_relational_concepts/lib/: PromptValidator.py  balance_grouped_items.py  logger.py  token_utils.py
linear_relational_concepts/training/: AvgConceptTrainer.py  BenchmarkIterationsResult.py  BenchmarkResult.py  ConceptTrainer.py  LogisticRegressionConceptTrainer.py  LreConceptTrainer.py  SvmConceptTrainer.py  benchmarking.py  plot_sweep_results.py  sweep_lre_params.py  train_avg_concept_vector.py  train_concept_vector_via_logistic_regression.py  train_concept_vector_via_svm.py  train_lre.py
multitoken_estimator/: CausalEditor.py  Concept.py  ConceptMatcher.py  EarlyDecoder.py  LinearRelationalEmbedding.py  MultitokenEstimator.py  ObjectMappingModel.py  PromptGenerator.py  RelationalConceptEstimator.py  SubjectConceptDirection.py  TraceLayer.py  constants.py  data_model.py  database.py  layer_matching.py  logger.py  similarity.py  token_utils.py  torch_utils.py  util.py
multitoken_estimator/data/: RelationDataset.py  data_model.py  (+6 more)
tests/: conftest.py  helpers.py  test_CausalEditor.py  test_ConceptMatcher.py  test_EarlyDecoder.py  test_LinearRelationalEmbedding.py  test_PromptGenerator.py  test_data_model.py  test_database.py  test_similarity.py  test_util.py  test_verify_answers_match_expected.py
(+71 files in other folders)
