[tool.poetry]
name = "multitoken-estimator"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"
packages = [{ include = "multitoken_estimator" }]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.6.1"
transformers = "^4.34.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
mypy = "^1.6.0"
isort = "^5.12.0"
torch = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
