[tool.poetry]
name = "linear-relational-concepts"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"
packages = [{ include = "linear_relational_concepts" }]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.6.1"
transformers = "^4.34.0"
tqdm = "^4.66.1"
sentencepiece = "^0.1.99"
pytorch-lightning = "^2.1.0"
scikit-learn = "^1.3.2"
protobuf = "^4.24.4"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
mypy = "^1.6.0"
isort = "^5.12.0"
torch = "2.0.0"   # pending https://github.com/pytorch/pytorch/issues/100974 fix
syrupy = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
